--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <!-- header -->
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,10 +23,10 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
     <!--main image-->
-    <div class="hero"></div>
+    <section class="hero"></section>
 
     <!--main content-->
     <div class="content">
@@ -52,8 +52,8 @@
             </p>
         </div>
     </div>
-    <!-- side bar -->
-    <div class="benefits">
+    <!-- aside content -->
+    <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -75,7 +75,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </aside>
     
     <!--Footer-->
     <div class="footer">
