--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
     <section class="hero"></section>
 
     <!--main content-->
+
     <div class="content">
-        <div class="search-engine-optimization">
+        <article id="search-engine-optimization" 
+        class="search-engine-optimization">
+        <!--why does changing the div to article affect the alignment of the page here? Why was the id missing? what is life???? -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </article>
+
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -52,6 +56,7 @@
             </p>
         </div>
     </div>
+    
     <!-- aside content -->
     <aside class="benefits">
         <div class="benefit-lead">
@@ -78,12 +83,12 @@
     </aside>
     
     <!--Footer-->
-    <div class="footer">
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
