--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <!--main content-->
 
     <div class="content">
-        <article id="search-engine-optimization" 
-        class="search-engine-optimization">
+        <article class="article-graphic">
         <!--why does changing the div to article affect the alignment of the page here? Why was the id missing? what is life???? -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -41,14 +40,14 @@
             </p>
         </article>
 
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div class="article-graphic">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div class="article-graphic">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -59,21 +58,21 @@
     
     <!-- aside content -->
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-header">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-header">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-header">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
