--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!--main content-->
 
-    <div class="content">
+    <section class="content">
         <article class="article-graphic">
         <!--why does changing the div to article affect the alignment of the page here? Why was the id missing? what is life???? -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -40,45 +40,45 @@
             </p>
         </article>
 
-        <div class="article-graphic">
+        <article class="article-graphic">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div class="article-graphic">
+        </article>
+        <article class="article-graphic">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </article>
+    </section>
     
     <!-- aside content -->
     <aside class="benefits">
-        <div class="benefit-header">
+        <article class="benefit-header">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-header">
+        </article>
+        <article class="benefit-header">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-header">
+        </article>
+        <article class="benefit-header">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </article>
     </aside>
     
     <!--Footer-->
