edited README, fixed ids in html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!--main content-->
 
     <section class="content">
-        <article class="article-graphic">
+        <article id="search-engine-optimization" class="article-graphic">
         <!--why does changing the div to article affect the alignment of the page here? Why was the id missing? what is life???? -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="Image of notebook with SEO written on it" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -40,14 +40,14 @@
             </p>
         </article>
 
-        <article class="article-graphic">
+        <article id="online-reputation-management" class="article-graphic">
             <img src="./assets/images/online-reputation-management.jpg" alt="Image of Laptop on table" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article class="article-graphic">
+        <article id="social-media-marketing" class="article-graphic">
             <img src="./assets/images/social-media-marketing.jpg" alt="Cirlce of hands tweeting" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
