Updated Html alt tags, updated CSS; started readme

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </p>
         </article>
         <article id="social-media-marketing" class="article-graphic">
-            <img src="./assets/images/social-media-marketing.jpg" alt="Cirlce of hands tweeting" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="Group of people brainstorming about social media use" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -67,7 +67,7 @@
         </article>
         <article class="benefit-header">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="5G Slenderman"/>
+            <img src="./assets/images/brand-awareness.png" alt="Lightbulb all lit up in a suit"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
