Made HTML and CSS less redundant

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <!-- header -->
-    <header class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
@@ -32,7 +32,6 @@
 
     <section class="content">
         <article id="search-engine-optimization" class="article-graphic">
-        <!--why does changing the div to article affect the alignment of the page here? Why was the id missing? what is life???? -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="Image of notebook with SEO written on it" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -60,7 +59,7 @@
     <aside class="benefits">
         <article class="benefit-header">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="A gear funneling into money" />
+            <img src="./assets/images/lead-generation.png" alt="A gear funneling money" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
