made some final adjustments to HTML tag

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <!--main image-->
-    <section class="hero"></section>
+    <section class="figure" alt="Photo of people having a work meeting"></section>
 
     <!--main content-->
 
